fixed overflowing of the paragraph in the popup

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
     margin-right: 0;
     display: flex;
     border-radius: 10px;
+    overflow-y: hidden;
 }
 
 #popupImg {
